--- a/options.html
+++ b/options.html
@@ -6,14 +6,14 @@
 	<link rel="stylesheet" href="options.css">
 </head>
 <body>
-	<h1>PandaTv</h1>
-	<form action="">
-		<input type="text" id="room-id">
-		<button id="add-btn">add</button>
-	</form>
-	<h2>已关注列表：</h2>
+	<h2>我的订阅</h2>
 	<ul id="subsciption">
 	</ul>
+	<hr>
+	<form action="">
+		<input type="text" id="room-id" placeholder="输入主播房间号进行订阅">
+		<button id="add-btn">添加订阅</button>
+	</form>
 
 
 	<script src="options.js"></script>
