--- a/popup.html
+++ b/popup.html
@@ -3,28 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Show</title>
-	<style type="text/css" media="screen">
-		body {
-			/*visibility: hidden;*/
-			min-width: 250px;
-		}
-	</style>
+	<link rel="stylesheet" href="popup.css">
 </head>
 <body>
-<!-- <div>
-	<h2 class="host">酒神</h2>
-	<ul class="info">
-		<li>直播状态：<span class="status"></span></li>
-		<li>房间名称：<span class="room-name"></span></li>
-		<li>最近开播：<span class="start-time"></span></li>
-		<li>最近结束：<span class="end-time"></span></li>
-	</ul>
-</div> -->
+<button id="go-to-options">选项</button>
 <div id="content">
 
 </div>
 
-<button id="go-to-options">Options</button>
 
 <script src="popup.js" defer></script>
 </body>
