--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
 
 </div>
 
-
-<script src="popup.js" defer></script>
+<script src="common.js"></script>
+<script src="popup.js"></script>
 </body>
 </html>
