update notification ui

--- a/options.html
+++ b/options.html
@@ -9,12 +9,12 @@
 	<h2>我的订阅</h2>
 	<ul id="subscriptions">
 	</ul>
-	<hr>
-	<p id="feedback"></p>
-	<form action="">
+	<!-- <hr> -->
+	<div id="form-wrap">
 		<input type="text" id="room-id" placeholder="输入主播房间号进行订阅">
 		<button id="add-btn">添加订阅</button>
-	</form>
+	</div>
+	<p id="feedback">feedback text</p>
 
 
 	<script src="common.js"></script>
