--- a/options.html
+++ b/options.html
@@ -6,13 +6,13 @@
 	<link rel="stylesheet" href="options.css">
 </head>
 <body>
-	<h2>我的订阅</h2>
+	<h2>我的司机</h2>
 	<ul id="subscriptions">
 	</ul>
 	<!-- <hr> -->
 	<div id="form-wrap">
-		<input type="text" id="room-id" placeholder="输入主播房间号进行订阅">
-		<button id="add-btn">添加订阅</button>
+		<input type="text" id="room-id" placeholder="输入主播房间号进行添加">
+		<button id="add-btn">添加关注</button>
 	</div>
 	<p id="feedback">feedback text</p>
 
