--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="popup.css">
 </head>
 <body>
-<p id="empty">目前没有添加司机。点击选项进行添加</p>
+<p id="empty">目前没有关注主播。点击选项进行添加</p>
 <button id="go-to-options">选项</button>
 <div id="content">
 
